--- a/Elastic.Kibana.Serilog/Elastic.Kibana.Serilog.csproj
+++ b/Elastic.Kibana.Serilog/Elastic.Kibana.Serilog.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <PackageReference Include="Serilog.Exceptions" Version="5.4.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
   </ItemGroup>
