--- a/Elastic.Kibana.Serilog/appsettings.json
+++ b/Elastic.Kibana.Serilog/appsettings.json
@@ -1,15 +1,16 @@
 {
 	"Serilog": {
 		"MinimumLevel": {
-			"Default": "Information",
+			"Default": "Error",
 			"Override": {
-				"Microsoft": "Information",
-				"System": "Warning"
+				"Microsoft": "Error",
+				"System": "Error"
 			}
 		}
 	},
 	"ElasticConfiguration": {
-		"Uri": "http://localhost:9200"
+		"Uri": "http://localhost:9200",
+		"ApplicationName": "elastic-kibana-serilog"
 	},
 	"AllowedHosts": "*"
 }
