Add Serilog logging configuration and enhance controllers with logging

--- a/ApiLogElastic/appsettings.json
+++ b/ApiLogElastic/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Serilog": {
+		"MinimumLevel": {
+			"Default": "Error",
+			"Override": {
+				"Microsoft": "Error",
+				"System": "Error"
+			}
+		}
+	},
+	"ElasticConfiguration": {
+		"Uri": "http://localhost:9200",
+		"ApplicationName": "api-log-elastic"
+	},
+	"AllowedHosts": "*"
 }
