--- a/ApiLogElastic/appsettings.Development.json
+++ b/ApiLogElastic/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"Serilog": {
+		"MinimumLevel": {
+			"Default": "Information",
+			"Override": {
+				"Microsoft": "Information",
+				"System": "Warning"
+			}
+		}
+	}
 }
